# teachers-console

./: .gitignore  .prettierignore  .prettierrc  App.tsx  Cargo.toml  README.md  docker-compose.yml  dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docs/: installer.sh
pages/: Login.tsx
server/: .env.example  .gitignore  Cargo.toml  README.md
server/migrations/2023-09-07-185109_create_users/: up.sql
server/migrations/2023-09-08-000638_make_unique_constraints/: down.sql  up.sql
server/src/: client.rs  db.rs  main.rs  schema.rs  state.rs
server/src/auth/: data.rs  login.rs  mod.rs  register.rs
server/src/config/: app.rs  mod.rs
server/src/errors/: db.rs  mod.rs
server/src/logging/: config.rs
server/src/middleware/: logger.rs
server/src/models/: user.rs
server/src/routes/: client.rs  login.rs  mod.rs  register.rs  resetpass.rs  token.rs  user.rs
server/src/util/: hash.rs  mod.rs
server/tests/: login.sh
src/: App.tsx  index.css  main.tsx  server.js
src/api/: buttonfuncs.ts  getinfo.ts
src/api/middleware/: sockets.ts
src/pages/: account.tsx  auth.scss  auth.tsx
supabase-react/: README.md  package-lock.json  package.json
supabase-react/src/: App.tsx
supabase-react/src/pages/: auth.tsx
teachers-console/: .gitignore  App.tsx  app.json  package-lock.json  package.json
teachers-console/api/: passchecker.ts  supabase.ts
teachers-console/pages/: Home.tsx
