[package]
name = "teachers-console"
authors = ["Ravinder Oliver Singh Dadiala", "Jacob Sapoznikow"]
version = "0.1.0"
edition = "2021"
readme = "../README.md"

description = """
Admin console for the teachers (ISB 3D Printers).
"""

license = "MIT"
homepage = "https://github.com/ISB3DPRINTERS/teachers-console"
repository = "https://github.com/ISB3DPRINTERS/teachers-console"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["headers", "macros", "ws", "multipart", "http2", "json"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.23", features = ["serde"] }
derive_more = "0.99.17"
diesel = { version = "2.1.1", features = ["sqlite", "postgres"] }
dotenvy = "0.15.7"
either = { version = "1.9.0", features = ["serde"] }
env_logger = "0.10.0"
flate2 = { version = "1.0.27", features = ["zlib"] }
futures = "0.3.28"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["full"] }
include_dir = "0.7.3"
indicatif = "0.17.6"
lazy_static = "1.4.0"
log = "0.4.20"
once_cell = "1.18.0"
password-hash = "0.5.0"
rand = "0.8.5"
redis = { version = "0.23.3", features = ["tokio", "serde", "serde_json", "tokio-comp", "connection-manager"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["stream", "json", "gzip", "rustls"] }
ring = "0.16.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_urlencoded = "0.7.1"
tar = "0.4.40"
tempdir = "0.3.7"
tokio = { version = "1.32.0", features = ["full"] }
tokio-pg-mapper = "0.2.0"
tokio-postgres = "0.7.10"
tokio-stream = "0.1.14"
toml = "0.7.6"
tower = { version = "0.4.13", features = ["full"] }
url = "2.4.1"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
zip-extract = "0.1.2"
